force-app/main/04_architecturalPatterns/multiTopicNavigation/objects/ASR_Hotel_Booking__c/ASR_Hotel_Booking__c.object-meta.xml
<CustomObject>
    <label>Hotel Booking</label>
    <nameField>
        <displayFormat>HB-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>