force-app/main/04_architecturalPatterns/multiTopicNavigation/objects/ASR_Hotel_Booking__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <label>Check In</label>
    <type>Date</type>
</CustomField>