force-app/main/04_architecturalPatterns/multiTopicNavigation/objects/ASR_Hotel_Booking__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel</label>
    <referenceTo>ASR_Hotel__c</referenceTo>
    <relationshipLabel>Hotel Bookings</relationshipLabel>
    <relationshipName>ASR_Hotel_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>